package fis.dsw.sgc.administracion.model;

public enum EstadoCuenta {
    ACTIVA,
    DESACTIVADA
}