package fis.dsw.sgc.administracion.model;

public enum NombreRol {
    ADMINISTRADOR,
    RESIDENTE,
    PROPIETARIO,
    PERSONAL_SEGURIDAD,
    PRESIDENTE
}