@startuml Diagrama_Dominio_GRB
skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam packageStyle rectangle

skinparam class {
    BackgroundColor #E8F1FF
    BorderColor #2F5EA8
    ArrowColor #2F5EA8
    FontColor #1F3F73
}
skinparam enum {
    BackgroundColor #EEF5FF
    BorderColor #1F3F73
    FontColor #1F3F73
}

package "Entidades del Dominio - Módulo GRB" {

    enum EstadoCuenta {
        ACTIVA
        DESACTIVADA
    }

    enum NombreRol {
        ADMINISTRADOR
        PRESIDENTE
        RESIDENTE
        PROPIETARIO
        PERSONAL_SEGURIDAD
    }

    class Usuario {
        - idUsuario  : UUID
        - nombre     : String
        - apellido   : String
        - correo     : String
        - contraseña : String
        + verificarContraseña(pass : String) : boolean
    }

    class Cuenta {
        - idCuenta          : UUID
        - estado            : EstadoCuenta
        - fechaCreacion     : Date
        - fechaModificacion : Date
        + activar()                                          : void
        + desactivar()                                       : void
        + validarCredenciales(correo : String, pass : String) : boolean
    }

    class Perfil {
        - idPerfil           : UUID
        - telefono           : String
        - direccion          : String
        - fotoPerfil         : String
        - fechaActualizacion : Date
        + actualizar(datos : Map) : void
    }

    class Rol {
        - idRol       : UUID
        - nombre      : NombreRol
        - descripcion : String
        + obtenerPermisos() : List<Permiso>
    }

    class Permiso {
        - idPermiso   : UUID
        - nombre      : String
        - descripcion : String
        - recurso     : String
        + esValido() : boolean
    }

    class TokenRestablecimiento {
        - idToken         : UUID
        - codigo          : String
        - fechaExpiracion : Date
        - intentos        : Integer
        + esValido()     : boolean
        + estaExpirado() : boolean
    }

    ' Composición: Usuario posee su Cuenta
    Usuario "1" *-- "1" Cuenta : posee

    ' Asociación: Usuario tiene un Perfil
    Usuario "1" -- "1" Perfil : tiene

    ' Muchos a muchos: una Cuenta puede tener varios Roles
    Cuenta "*" -- "*" Rol : asignado a

    ' Composición: Rol define sus Permisos
    Rol *-- "1..*" Permiso : define

    ' Asociación: Cuenta genera tokens de restablecimiento
    Cuenta "1" -- "0..*" TokenRestablecimiento : genera >

    ' Dependencias de enums
    Cuenta .down.> EstadoCuenta : <<use>>
    Rol    .down.> NombreRol    : <<use>>
}
@enduml
